--- a/internal/httpapi/templates/subscription_confirmed.tmpl
+++ b/internal/httpapi/templates/subscription_confirmed.tmpl
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" integrity="sha384-XGjxtQfXaH2tnPFa9x+ruJTuLE3Aa6LhHSWRr1XeTyhezb4abCG4ccI5AkVDxqC+" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/MarcoPoloResearchLab/mpr-ui@latest/mpr-ui.css" />
     <link rel="icon" type="image/svg+xml" href="{{.FaviconDataURI}}" />
+    {{if .TauthScriptURL}}<script defer src="{{.TauthScriptURL}}"></script>{{end}}
     <script defer src="https://cdn.jsdelivr.net/gh/MarcoPoloResearchLab/mpr-ui@latest/mpr-ui.js"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <style>
 {{.SharedStyles}}
       .subscription-confirm-card {
@@ -41,7 +43,7 @@
                     {{if .UnsubscribeURL}}
                     <a class="btn btn-outline-danger" href="{{.UnsubscribeURL}}">Unsubscribe</a>
                     {{else}}
-                    <a class="btn btn-outline-secondary" href="/login">Return to LoopAware</a>
+                    <a class="btn btn-outline-secondary" href="{{.LandingPath}}">Return to LoopAware</a>
                     {{end}}
                   </div>
                 </div>
