fix(ui): restore settings modal content
- open settings modal directly from the profile dropdown action
- add integration coverage for settings modal text visibility/contrast
- CI: make test, make lint, make ci

--- a/internal/httpapi/templates/dashboard_header.tmpl
+++ b/internal/httpapi/templates/dashboard_header.tmpl
@@ -10,7 +10,7 @@
       <span class="loopaware-profile-name" data-loopaware-profile-name="true"></span>
     </button>
     <div class="dropdown-menu dropdown-menu-end loopaware-profile-menu" data-loopaware-profile-menu-items="true">
-      <button id="{{.SettingsButtonID}}" type="button" class="dropdown-item loopaware-profile-item" data-bs-toggle="modal" data-bs-target="#{{.SettingsModalID}}">{{.SettingsButtonLabel}}</button>
+      <button id="{{.SettingsButtonID}}" type="button" class="dropdown-item loopaware-profile-item" data-loopaware-settings="true" data-bs-toggle="modal" data-bs-target="#{{.SettingsModalID}}">{{.SettingsButtonLabel}}</button>
       <button type="button" class="dropdown-item loopaware-profile-item" data-loopaware-logout="true">{{.HeaderSignOutLabel}}</button>
     </div>
   </div>
