--- a/internal/httpapi/templates/dashboard_header.tmpl
+++ b/internal/httpapi/templates/dashboard_header.tmpl
@@ -5,7 +5,7 @@
     <span class="fw-semibold">{{.PageTitle}}</span>
   </span>
   <div slot="aux" class="loopaware-profile-dropdown dropdown" data-loopaware-profile-menu="true">
-    <button type="button" class="loopaware-profile-toggle dropdown-toggle" data-loopaware-profile-toggle="true" data-bs-toggle="dropdown" aria-expanded="false">
+    <button type="button" class="loopaware-profile-toggle dropdown-toggle" data-loopaware-profile-toggle="true" aria-expanded="false">
       <img class="loopaware-header-avatar d-none" data-loopaware-avatar="true" alt="User avatar" />
     </button>
     <div class="dropdown-menu dropdown-menu-end loopaware-profile-menu" data-loopaware-profile-menu-items="true">
